// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormField/> render with default/required props 1`] = `
<label
  className="form-input  form-input_label"
>
  <Component
    data-cy=""
  />
</label>
`;

exports[`<FormField/> render with optional props [::errors] as "{{error}}" 1`] = `
<label
  className="form-input  form-input_label"
>
  <Component
    data-cy=""
  />
  <ul
    className="form-input_errors"
  >
    <li
      className="form-input_error"
      data-cy="-error-0"
      key="0"
    >
      {{error}}
    </li>
  </ul>
</label>
`;
